--- a/main.css
+++ b/main.css
@@ -3,6 +3,7 @@
 }
 html, body {
   font-family: 'Lato', sans-serif;
+  height:100%;
 }
 ul {
   list-style-type: none;
@@ -35,21 +36,58 @@ li a:hover{
   margin-top:30px;
 }
 .work_logos{
-  width:100px;
+  width:10%;
   border-color:blue;
   border-width: 5px;
   border-style: solid;
   border-radius: 50%;
 }
-.col-1 {width: 8.33%;}
-.col-2 {width: 16.66%;}
-.col-3 {width: 25%;}
-.col-4 {width: 33.33%;}
-.col-5 {width: 41.66%;}
-.col-6 {width: 50%;}
-.col-7 {width: 58.33%;}
-.col-8 {width: 66.66%;}
-.col-9 {width: 75%;}
-.col-10 {width: 83.33%;}
-.col-11 {width: 91.66%;}
-.col-12 {width: 100%;}
+.bgimg{
+  background-image: url('/resources/bg3.jpg');
+  min-height: 100%;
+  background-position: center;
+  background-size: cover;
+}
+.display-container{
+  position:relative;
+}
+.display-middle{
+  position:absolute;
+  top:25%;
+  left:50%;
+  transform:translate(-50%,-50%);
+  -ms-transform:translate(-50%,-50%);
+}
+.animate-opacity{
+  -webkit-animation:opac 0.8s;
+  animation:opac 0.8s
+}
+.jumbo{
+  font-size: 64px!important;
+  background-color: rgba(0, 0, 0, 0.81)
+}
+.animate-top{
+  position:relative;
+  -webkit-animation:animatetop 0.4s;
+  animation:animatetop 0.4s;
+}
+.text-white{
+  color:#fff!important;
+}
+.border-grey{
+  border-color: #9e9e9e!important;
+}
+.large{
+  font-size:18px!important;
+}
+.center{
+  text-align:center!important;
+}
+.display-bottomleft{
+  position:absolute;
+  left:0;
+  bottom:0;
+}
+.padding-large{
+  padding:12px 24px!important;
+}
